# janus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-please.yml
commands/: janus.md
docs/: BESPOKE-DESIGN.md
hooks/: hooks.json  session_end_capture.py
src/janus/: __init__.py  __main__.py  cli.py  clock.py  cycle.py  ports.py  recursion.py
src/janus/domain/: __init__.py  gate.py  proposal.py  split.py  threat_scan.py  trust.py  types.py
src/janus/harvest/: __init__.py  jsonl.py
src/janus/mine/: __init__.py  composite.py  correction.py  recurrence.py
src/janus/store/: __init__.py  adopter.py  ignore_store.py  memory_state.py  proposal_store.py
src/janus/worker/: __init__.py  claude_cli.py
tests/: test_capture.py  test_cli.py  test_correction_miner.py  test_cycle.py  test_cycle_live.py  test_doctor.py  test_gate.py  test_harvest.py  test_ignore_store.py  test_memory_state.py  test_recursion.py  test_reflect_prompt.py  test_split.py  test_store.py  test_threat_scan.py  test_trust.py  test_worker_call.py  test_worker_cmd.py
